PA_Education/TestMenifest/force-app/main/default/objects/TrekRecord__c/TrekRecord__c.object-meta.xml
<CustomObject>
    <description>실적 Object</description>
    <label>실적</label>
    <nameField>
        <displayFormat>실적-{0000}</displayFormat>
        <label>실적 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>