PA_Education/TestMenifest/force-app/main/default/objects/TrekRecord__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>고객사명 Object - Lookup</description>
    <label>고객사명</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>실적</relationshipLabel>
    <relationshipName>AccountDetail</relationshipName>
    <type>Lookup</type>
</CustomField>