PA_Education/TestMenifest/force-app/main/default/objects/TrekRecord__c/fields/Challenge__c.field-meta.xml
<CustomField>
    <fullName>Challenge__c</fullName>
    <label>Challenge</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>