PA_Education/TestMenifest/force-app/main/default/objects/TrekRecord__c/fields/ChallengeEng__c.field-meta.xml
<CustomField>
    <fullName>ChallengeEng__c</fullName>
    <label>Challenge (English)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>