PA_Education/TestMenifest/force-app/main/default/objects/TrekRecord__c/fields/EndYear__c.field-meta.xml
<CustomField>
    <fullName>EndYear__c</fullName>
    <description>ex) 2021,2020,2019.. 프로젝트 종료 일자</description>
    <label>종료년도</label>
    <length>10</length>
    <type>Text</type>
</CustomField>