PA_Education/TestMenifest/force-app/main/default/objects/TrekRecord__c/fields/fm_Industry__c.field-meta.xml
<CustomField>
    <fullName>fm_Industry__c</fullName>
    <formula>TEXT(Account__r.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>산업군</label>
    <type>Text</type>
</CustomField>