PA_Education/TestMenifest/force-app/main/default/objects/TrekRecord__c/fields/HPCheckBox__c.field-meta.xml
<CustomField>
    <fullName>HPCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>값이 true 인 것만 홈페이지 노출</description>
    <label>홈페이지노출여부</label>
    <type>Checkbox</type>
</CustomField>