PA_Education/TestMenifest/force-app/main/default/objects/TrekRecord__c/fields/OurApproach__c.field-meta.xml
<CustomField>
    <fullName>OurApproach__c</fullName>
    <label>Our Approach</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>