PA_Education/TestMenifest/force-app/main/default/objects/TrekRecord__c/fields/OurApproachEng__c.field-meta.xml
<CustomField>
    <fullName>OurApproachEng__c</fullName>
    <label>Our Approach (English)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>