PA_Education/TestMenifest/force-app/main/default/objects/TrekRecord__c/fields/ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ProjectName__c</fullName>
    <description>진행한 프로젝트 명</description>
    <label>프로젝트 명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>