PA_Education/TestMenifest/force-app/main/default/objects/TrekRecord__c/fields/ProjectNameEng__c.field-meta.xml
<CustomField>
    <fullName>ProjectNameEng__c</fullName>
    <label>프로젝트 명 (English)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>