PA_Education/TestMenifest/force-app/main/default/objects/TrekRecord__c/fields/StartYear__c.field-meta.xml
<CustomField>
    <fullName>StartYear__c</fullName>
    <description>ex) 2021,2020, 2019</description>
    <label>시작년도</label>
    <length>10</length>
    <type>Text</type>
</CustomField>