PA_Education/TestMenifest/force-app/main/default/objects/TrekRecord__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ProjectName__c</columns>
    <columns>Challenge__c</columns>
    <columns>OurApproach__c</columns>
    <columns>ApproachSolution__c</columns>
    <columns>fm_Industry__c</columns>
    <columns>StartYear__c</columns>
    <columns>EndYear__c</columns>
    <columns>OrderNum__c</columns>
    <columns>HPCheckBox__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>